force-app/main/default/objects/WRDB_Interests__mdt/WRDB_Interests__mdt.object-meta.xml
<CustomObject>
    <description>Interests to category mapping for wardrobing</description>
    <label>WRDB Interest</label>
    <pluralLabel>WRDB Interests</pluralLabel>
</CustomObject>