force-app/main/default/objects/WRDB_Interests__mdt/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <label>Category ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>