force-app/main/default/objects/WRDB_Interests__mdt/fields/Category_name__c.field-meta.xml
<CustomField>
    <fullName>Category_name__c</fullName>
    <label>Category name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>