force-app/main/default/objects/WRDB_Interests__mdt/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>5</length>
    <type>Text</type>
</CustomField>